--- a/Android/ArtI/gradle/libs.versions.toml
+++ b/Android/ArtI/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ coroutines = "1.7.3"
 fragment = "1.8.1"
 glide = "4.16.0"
 timber = "5.0.1"
+viewpager2 = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -55,6 +56,8 @@ fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 #timber
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+#ViewPager2
+viewpager2 = {group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2"}
 
 [bundles]
 network = ["retrofit2", "okhttp3", "okhttp3-logging", "gson"]
