--- a/Android/ArtI/app/src/main/AndroidManifest.xml
+++ b/Android/ArtI/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true">
         </activity>
     </application>
