--- a/Arti-Backend/build.gradle
+++ b/Arti-Backend/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-
+	implementation 'com.opencsv:opencsv:5.5'
 
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
