--- a/Android/ArtI/gradle/libs.versions.toml
+++ b/Android/ArtI/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.0"
+drawerlayout = "1.2.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -58,6 +59,8 @@ glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "gl
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 #ViewPager2
 viewpager2 = {group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2"}
+#DrawerLayout
+androidx-drawerlayout = { module = "androidx.drawerlayout:drawerlayout", version.ref = "drawerlayout" }
 
 [bundles]
 network = ["retrofit2", "okhttp3", "okhttp3-logging", "gson"]
