--- a/Android/ArtI/gradle/libs.versions.toml
+++ b/Android/ArtI/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ fragment = "1.8.1"
 glide = "4.16.0"
 timber = "5.0.1"
 viewpager2 = "1.1.0"
+gridlayout = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,6 +62,7 @@ timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "tim
 viewpager2 = {group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2"}
 #DrawerLayout
 androidx-drawerlayout = { module = "androidx.drawerlayout:drawerlayout", version.ref = "drawerlayout" }
+androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
 
 [bundles]
 network = ["retrofit2", "okhttp3", "okhttp3-logging", "gson"]
