--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/arti
 spring.datasource.username=root
 spring.datasource.password=0000
 
+spring.data.redis.repositories.enabled=false
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.servlet.encoding.charset=UTF-8
+spring.servlet.encoding.enabled=true
+spring.servlet.encoding.force=true
