--- a/backend(AI)/requirements.txt
+++ b/backend(AI)/requirements.txt
@@ -2,10 +2,14 @@ absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.4.0
 astunparse==1.6.3
+bpy==4.0.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+Cython==3.0.11
+dataclasses-json==0.6.7
+Deprecated==1.2.14
 exceptiongroup==1.2.2
 faiss-cpu==1.8.0.post1
 fastapi==0.114.1
@@ -25,9 +29,11 @@ libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 mdurl==0.1.2
 ml-dtypes==0.4.0
 mpmath==1.3.0
+mypy-extensions==1.0.0
 namex==0.0.8
 networkx==3.3
 numpy==1.26.4
@@ -39,9 +45,11 @@ pillow==10.4.0
 protobuf==4.25.4
 pydantic==2.9.1
 pydantic_core==2.23.3
+pygltflib==1.16.2
 Pygments==2.18.0
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
+python-multipart==0.0.9
 pytz==2024.2
 requests==2.32.3
 rich==13.8.1
@@ -52,18 +60,18 @@ starlette==0.38.5
 sympy==1.13.2
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
 tensorflow-hub==0.16.1
-tensorflow-intel==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 tf_keras==2.17.0
 torch==2.4.1
 torchvision==0.19.1
 tqdm==4.66.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.6
 Werkzeug==3.0.4
 wrapt==1.16.0
+zstandard==0.23.0
