--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -4,10 +4,13 @@ server.port=5000
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/arti
-spring.datasource.username=root
-spring.datasource.password=0000
+#spring.datasource.url=jdbc:mysql://localhost:3306/arti
+#spring.datasource.username=root
+#spring.datasource.password=0000
 
+spring.datasource.url=jdbc:mysql://j11d106.p.ssafy.io:3306/arti?rewriteBatchedStatements=true
+spring.datasource.username=arti
+spring.datasource.password=arti
 spring.data.redis.repositories.enabled=false
 
 spring.jpa.hibernate.ddl-auto=update
