--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port=5000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/arti
+#spring.datasource.username=root
+#spring.datasource.password=0000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
@@ -10,3 +13,7 @@ spring.servlet.encoding.enabled=true
 spring.servlet.encoding.force=true
 spring.h2.console.enabled=true
 spring.profiles.include=dev
+spring.profiles.active=dev
+
+
+
