--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.servlet.encoding.force=true
 spring.h2.console.enabled=true
 spring.profiles.include=dev
 spring.profiles.active=dev
-server.image.base-url=http://j11d106.p.ssafy.io/artwork/
+server.image.base-url=http://j11d106.p.ssafy.io:5000/artwork/images/
 server.image.base-path=/home/ubuntu/artwork/
 
 
