chore: docker-compose.yml networks 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     volumes:
       - ./images:/var/images
     networks:
-      - colorpl
+      - arti
 
 networks:
-  colorpl:
+  arti:
     external: true
