--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -24,3 +24,5 @@ security.jwt.expiration-time=3600000
 server.forward-headers-strategy=framework
 server.tomcat.remoteip.remote-ip-header=x-forwarded-for
 server.tomcat.remoteip.protocol-header=x-forwarded-proto
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/,file:/home/ubuntu/artwork/
