--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: arti
     volumes:
       - /home/ubuntu/artwork:/var/images
+    ports:
+      - 5000:5000
     networks:
       - arti
 
