--- a/backend(AI)/requirements.txt
+++ b/backend(AI)/requirements.txt
@@ -4,9 +4,11 @@ anyio==4.4.0
 astunparse==1.6.3
 bpy==4.0.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.1
 Cython==3.0.11
 dataclasses-json==0.6.7
 Deprecated==1.2.14
@@ -22,6 +24,7 @@ greenlet==3.1.0
 grpcio==1.66.1
 h11==0.14.0
 h5py==3.11.0
+huggingface-hub==0.25.1
 idna==3.8
 Jinja2==3.1.4
 keras==3.5.0
@@ -43,6 +46,7 @@ packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 protobuf==4.25.4
+pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
 pygltflib==1.16.2
@@ -51,8 +55,12 @@ PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-multipart==0.0.9
 pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
 rich==13.8.1
+safetensors==0.4.5
+scipy==1.14.1
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
@@ -60,13 +68,17 @@ starlette==0.38.5
 sympy==1.13.2
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
+tensorflow==2.17.0
 tensorflow-hub==0.16.1
+tensorflow-intel==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 tf_keras==2.17.0
+tokenizers==0.20.0
 torch==2.4.1
 torchvision==0.19.1
 tqdm==4.66.5
+transformers==4.45.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
