* fix : docker compose
Former-commit-id: e6a615630fc324af19ed22aecebcb03ff5505e02

--- a/backend(AI)/docker-compose.yml
+++ b/backend(AI)/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     container_name: fastapi
     volumes:
       - /home/ubuntu/artwork:/artwork/images
+      - /home/ubuntu/music:/music/audio
     networks:
       - arti
+    ports:
+      - 9000:8080
 
 networks:
   arti:
