--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=arti
-server.port=5000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/arti
-#spring.datasource.username=root
-#spring.datasource.password=0000
+spring.datasource.url=jdbc:mysql://localhost:3306/arti
+spring.datasource.username=root
+spring.datasource.password=0000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
@@ -25,3 +24,6 @@ server.tomcat.remoteip.remote-ip-header=x-forwarded-for
 server.tomcat.remoteip.protocol-header=x-forwarded-proto
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/,file:/var/images/
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
