chore : gallery 생성 및 수정시 multipart로 받도록 수정

--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -24,3 +24,6 @@ server.tomcat.remoteip.remote-ip-header=x-forwarded-for
 server.tomcat.remoteip.protocol-header=x-forwarded-proto
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/,file:/var/images/
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
