--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=arti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/arti
+#spring.datasource.url=jdbc:mysql://localhost:3306/arti?createDatabaseIfNotExist=true
 #spring.datasource.username=root
-#spring.datasource.password=0000
+#spring.datasource.password=00000000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
@@ -27,3 +27,12 @@ spring.web.resources.static-locations=classpath:/static/,file:/var/images/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# ?? ??
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=garamyang67@gmail.com
+spring.mail.password=qil iimx jfvf qmgw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
