--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -2,9 +2,18 @@ spring.application.name=arti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/arti?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/arti?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=00000000
+#spring.datasource.url=jdbc:mysql://j11d106.p.ssafy.io:3306/arti
 #spring.datasource.username=root
-#spring.datasource.password=00000000
+#spring.datasource.password=J7s!mB2pL9^tQ8
+cloud.aws.credentials.accessKey=AKIAYS2NSYLCJ5KZJJVS
+cloud.aws.credentials.secretKey=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
+cloud.aws.s3.bucketName=ssafy-arti
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto-=false
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
@@ -31,8 +40,9 @@ spring.servlet.multipart.max-request-size=10MB
 # ?? ??
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+mail.senderEmail=garamyang67@gmail.com
 spring.mail.username=garamyang67@gmail.com
-spring.mail.password=qil iimx jfvf qmgw
+spring.mail.password=nljybszaawvmwxnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
