--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.servlet.multipart.max-request-size=10MB
 # ?? ??
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-mail.senderEmail=garamyang67@gmail.com
+mail.senderEmail=Arti
 spring.mail.username=garamyang67@gmail.com
 spring.mail.password=nljybszaawvmwxnd
 spring.mail.properties.mail.smtp.auth=true
