--- a/Arti-Backend/build.gradle
+++ b/Arti-Backend/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     implementation 'com.opencsv:opencsv:5.5'
+    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
