--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=arti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/arti
-#spring.datasource.username=root
-#spring.datasource.password=0000
+spring.datasource.url=jdbc:mysql://localhost:3306/arti
+spring.datasource.username=root
+spring.datasource.password=00000000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
@@ -37,3 +37,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.security.oauth2.client.registration.instagram.redirect-uri=https://socialsizzle.herokuapp.com/auth/
+spring.security.oauth2.client.registration.instagram.client-id=858779006399142
+spring.security.oauth2.client.registration.instagram.client-secret=1272d299494fc429af0274d242701471
