chore: 환경변수 수정

--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -37,6 +37,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.security.oauth2.client.registration.instagram.redirect-uri=https://socialsizzle.herokuapp.com/auth/
-spring.security.oauth2.client.registration.instagram.client-id=858779006399142
-spring.security.oauth2.client.registration.instagram.client-secret=1272d299494fc429af0274d242701471
+spring.security.oauth2.client.registration.instagram.redirect-uri=https://j11d106.p.ssafy.io/
+
