--- a/Android/ArtI/app/src/main/AndroidManifest.xml
+++ b/Android/ArtI/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".ui.LoginActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.SplashActivity"
