feat : artist에 캐싱 적용

--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.web.resources.static-locations=classpath:/static/,file:/var/images/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.cache.type=simple
+spring.cache.type=redis
 
 
 spring.mail.host=smtp.gmail.com
