--- a/Arti-Backend/src/main/resources/application.properties
+++ b/Arti-Backend/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=arti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.redis.repositories.enabled=false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/arti
+#spring.datasource.url=jdbc:mysql://localhost:3306/arti
 #spring.datasource.username=root
 #spring.datasource.password=0000
-#spring.jpa.properties.hibernate.format_sql=update
+spring.jpa.properties.hibernate.format_sql=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.encoding.charset=UTF-8
 spring.servlet.encoding.enabled=true
@@ -27,7 +27,7 @@ spring.web.resources.static-locations=classpath:/static/,file:/var/images/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.cache.type=simple
+spring.cache.type=redis
 
 
 spring.mail.host=smtp.gmail.com
