--- a/backend(AI)/.gitignore
+++ b/backend(AI)/.gitignore
@@ -22,9 +22,7 @@ venv
 docs.zip
 archive.zip
 
-/src/config/secrets_mariadb.json
-/src/config/secrets.json
-
+package-lock.json
 # vim temporary files
 *~
 .*.sw?
